# slide

./: .editorconfig  .gitignore  Makefile  README.md  meson.build  meson_options.txt
src/: meson.build  slide.c  slide.h
src/client/: client.c  client.h  meson.build
src/config/: autostart.h  keyboard.h  output.h
src/devices/input/: input.c  input.h  meson.build
src/devices/input/keyboard/: keyboard.c  keyboard.h  meson.build
src/devices/input/mouse/: meson.build  mouse.c  mouse.h
src/devices/output/: meson.build  output.c  output.h
src/features/: meson.build
src/features/autostart/: autostart.c  autostart.h  meson.build
src/protocols/: meson.build
src/utils/: die.c  die.h  meson.build
